@@ -209,9 +209,8 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.3</version>
                 <configuration>
-                    <source>21</source>
-                    <target>21</target>
-                    <compilerArgs>--enable-preview</compilerArgs>
+                    <source>22</source>
+                    <target>22</target>
                 </configuration>
             </plugin>
 
@@ -241,9 +240,9 @@
                     </execution>
                 </executions>
                 <configuration>
-                    <jvmArguments>--enable-preview</jvmArguments>
                     <mainClass>com.fpetrola.z80.bytecode.examples.RemoteZ80Translator</mainClass>
                     <executable>true</executable>
+                    <layout>ZIP</layout>
                 </configuration>
             </plugin>
         </plugins>
